# python-project-49

./: .gitignore  Makefile  README.md  brain_even.py  demo.cast  pyproject.toml
brain_games/: engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc_cli.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
