[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc_cli:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"

[tool.poetry.dev-dependencies]
ruff = "^0.0.290"

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]
